--- a/style/menu.css
+++ b/style/menu.css
@@ -285,6 +285,11 @@ body {
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.5s;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .revive-gameover {
@@ -293,7 +298,7 @@ body {
     border-radius: 12px;
     color: white;
     font-size: 1.8rem;
-    padding: 20px 40px;
+    padding: 20px 30px;
     cursor: pointer;
     text-align: center;
     text-transform: uppercase;
@@ -306,6 +311,10 @@ body {
     overflow: hidden;
     margin-top: 20px;
     display: none;
+    width: 80%; 
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .revive-gameover:hover {
