--- a/style/menu.css
+++ b/style/menu.css
@@ -348,3 +348,8 @@ body {
     50% { opacity: 1; }
     100% { opacity: 0.7; }
 }
+
+@keyframes twinkle {
+    0% { opacity: 0.3; }
+    100% { opacity: 1; }
+}
